--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-5xl;
+    @apply font-bold;
+  }
+
+  h2 {
+    @apply text-4xl;
+    @apply font-bold;
+  }
+
+  h3 {
+    @apply text-2xl;
+    @apply font-semibold;
+  }
+
+  h4 {
+    @apply text-lg;
+    @apply font-semibold;
+  }
+
+  body {
+    @apply text-sm;
+    @apply font-normal;
+  }
+}
