--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+  body {
+    @apply bg-stone-100;
+    @apply text-gray-800;
+  }
+
   h1 {
     @apply text-5xl;
     @apply font-bold;
@@ -30,5 +35,16 @@
 
   .error {
     @apply text-red-600;
+  }
+
+  .secondary {
+    @apply text-xs;
+  }
+}
+
+.content {
+  height: calc(100% - 8rem);
+  @media screen and (max-width: 768px) {
+    height: calc(100% - 7rem);
   }
 }
