Fix User Auth / Bugs (#12)
* feat: refresh local storage works

* fix: mapbox logo, some styling

* style: mobile sizing

* fix: reactive info panel

* feat: favicon

* feat: correct borough code for Kingsbridge

* feat: bypass auth if already exists

* style: spacing tweaks

* feat: subtitle

--- a/src/app.css
+++ b/src/app.css
@@ -45,6 +45,12 @@
 .content {
   height: calc(100% - 8rem);
   @media screen and (max-width: 768px) {
-    height: calc(100% - 7rem);
+    height: calc(100% - 5.5rem);
   }
+}
+
+/* remove link to mapbox from logo */
+.mapboxgl-ctrl-bottom-left a.mapboxgl-ctrl-logo {
+  pointer-events: none;
+  cursor: default;
 }
