--- a/src/app.css
+++ b/src/app.css
@@ -45,7 +45,7 @@
 .content {
   height: calc(100% - 8rem);
   @media screen and (max-width: 768px) {
-    height: calc(100% - 5.5rem);
+    height: 100%;
   }
 }
 
